--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@
   padding: 0;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   scroll-behavior: smooth;
   font-size: 16px;
