--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -58,7 +58,7 @@
   /* Layout */
   --container-max: 1280px;
   --container-pad: var(--space-6);
-  --navbar-height: 70px;
+  --navbar-height: 93px;
 
   /* Radius */
   --radius-sm:   4px;
